# cppprjtemplate

./: CMakeLists.txt  LICENSE  README.md
include/: mylib.h
src/: CMakeLists.txt  main.cpp  mylib.cpp
test/: CMakeLists.txt  TestMylib.cpp
